styled log in and sign up errors; fixed expand/collapse transition bug

--- a/cms/static/sass/_courseware.scss
+++ b/cms/static/sass/_courseware.scss
@@ -65,6 +65,7 @@ input.courseware-unit-search-input {
 		.expand-collapse-icon {
 			float: left;
 			margin: 16px 6px 16px 16px;
+			@include transition(none);
 		}
 
 		.drag-handle {
